# env-builder

./: .gitignore  .travis.yml  Dockerfile  README.md  README_ja.md  Vagrantfile  Vagrantfile.sample  all.yml  ansible.cfg  circle-test.sh  circle.yml  codecheck.yml  hosts-local  hosts.sample  pingbook.yml  playcircle.yml  setup.yml  test.sh
abcde/: .gitignore  Dockerfile  Dockerfile.template  abcde.cabal  ruby.yml  stack.yaml
abcde/app/: Main.hs
abcde/src/: Lib.hs
abcde/test/: Spec.hs
all/: Dockerfile  test.sh
ansible/: Dockerfile  Vagrantfile.sample  all.yml  codecheck.yml  hosts-vagrant  playcircle.yml  playrole.yml
ansible/sandbox/: gradle.yml  java.yml  mono.yml  node.yml
docker/all/: Dockerfile
roles/clang/tasks/: main.yml
roles/codecheck/tasks/: main.yml
roles/gcc/tasks/: main.yml
roles/git/tasks/: main.yml
roles/git/vars/: main.yml
roles/go/tasks/: main.yml
roles/gpp/tasks/: main.yml
roles/gradle/defaults/: main.yml
roles/gradle/meta/: main.yml
roles/gradle/tasks/: main.yml
roles/gradle/vars/: main.yml
roles/groovy/meta/: main.yml
roles/groovy/tasks/: main.yml
roles/groovy/vars/: main.yml
roles/haskell/tasks/: main.yml
roles/java/tasks/: main.yml
roles/maven/tasks/: main.yml
roles/mono/tasks/: main.yml
roles/mysql/files/: minimal-memory.cnf
roles/mysql/tasks/: main.yml
roles/node/tasks/: main.yml
roles/node/vars/: main.yml
roles/ocaml/tasks/: main.yml
roles/perl/tasks/: main.yml
roles/php/tasks/: main.yml  phpunit.yml
roles/postgresql/tasks/: main.yml
roles/postgresql/vars/: main.yml
roles/python/tasks/: main.yml  nose.yml  (+3 more)
ruby/: Dockerfile  test.sh
sandbox/: groovy.yml  mono.yml  php.yml  phpunit.yml
test/cpp/: test.cpp
test/java/: Test.java
(+25 files in other folders)
